Дабавил табы, фильтрацию по табам +правки

--- a/src/components/FilterSelect/FilterSelect.module.scss
+++ b/src/components/FilterSelect/FilterSelect.module.scss
@@ -108,7 +108,8 @@
 		line-height: 20px;
 
 		&:hover {
-			background: white;
+      background: #fbfbfb;
+      box-shadow: 3px 7px 14px 3px rgba(0, 96, 206, 0.1);
 		}
 	}
 
