--- a/src/pages/Home/gallery/GalleryAds/GalleryAds.module.scss
+++ b/src/pages/Home/gallery/GalleryAds/GalleryAds.module.scss
@@ -1,15 +1,15 @@
-.item {
-	position: relative;
-	border-radius: 10px;
-	height: 270px;
-	overflow: hidden;
-	transition: all 0.3s ease-in-out;
+// .item {
+// 	position: relative;
+// 	border-radius: 10px;
+// 	height: 270px;
+// 	overflow: hidden;
+// 	transition: all 0.3s ease-in-out;
 
-	&:hover {
-		transform: scale3d(1.1, 1.1, 1.1);
-		box-shadow: 4px 4px 8px 1px rgba(34, 60, 80, 0.2);
-	}
-}
+// 	&:hover {
+// 		transform: scale3d(1.1, 1.1, 1.1);
+// 		box-shadow: 4px 4px 8px 1px rgba(34, 60, 80, 0.2);
+// 	}
+// }
 
 .arrow {
 	position: absolute;
@@ -32,26 +32,43 @@
 	}
 
 	&:hover {
-    transform: scale(1.1);
+		transform: scale(1.1);
 		background: rgba(241, 239, 255, 0.317);
 	}
 }
 
-.link {
+.item {
 	display: flex;
+	height: 270px;
 	height: 100%;
-	position: relative;
 
-	&::after {
-		position: absolute;
-		content: '';
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background: var(--title);
-		opacity: 0.4;
-	}
+	position: relative;
+	border-radius: 10px;
+	overflow: hidden;
+}
+
+.item:after {
+	position: absolute;
+	content: '';
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: var(--title);
+	opacity: 0.4;
+	transition: 0.3s opacity linear;
+}
+
+.item:hover::after {
+	opacity: 0.1;
+}
+
+.img {
+	transition: transform 250ms linear;
+}
+
+.item:hover img{
+	transform: scale(1.05) rotate(1deg);
 }
 
 .desc {
@@ -59,8 +76,6 @@
 	padding: 37px;
 	position: absolute;
 	z-index: 99;
-	width: 100%;
-	height: 100%;
 }
 
 .subtitle {
@@ -103,7 +118,7 @@
 	transition: all 0.3s ease-in-out;
 
 	&:hover {
-    background: #612BFB;
+		background: #612bfb;
 		transform: scale3d(1.1, 1.1, 1.1);
 		color: var(--white);
 	}
