--- a/src/pages/NewsDetail/NewsDetail.module.scss
+++ b/src/pages/NewsDetail/NewsDetail.module.scss
@@ -108,23 +108,21 @@
 }
 
 .mainBlock {
-	padding-bottom: 65px;
-	position: relative;
-	top: -44px;
-}
-
-.wrapper {
-	display: flex;
-	padding-bottom: 65px;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
 	max-width: 844px;
 	margin: 0 auto;
+	padding-bottom: 65px;
+	margin-top: -44px;
 }
 
 .imgBlock {
+	position: relative;
 	margin-bottom: 40px;
+
+	svg {
+		position: absolute;
+		left: -117px;
+		top: 80px;
+	}
 }
 
 .textBlock {
