--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,15 +1,14 @@
 @font-face {
 	font-family: 'Inter';
-	src: url('./fonts/Inter-400.woff') format('woff'),
-		url('./fonts/Inter-400.woff2');
+	src: url('./fonts/Inter-400.woff2') format('woff2'),
+		url('./fonts/Inter-400.woff');
 	font-display: swap;
 	font-weight: 400;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Inter';
-	src: url('./fonts/Inter-500.woff2') format('woff2'),
-		url('./fonts/Inter-500.woff');
+	src: url('./fonts/Inter-500.woff2') format('woff2');
 	font-display: swap;
 	font-weight: 500;
 	font-style: normal;
