--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@
 	--title: #1e2224;
 	--white: #ffff;
 	--grey: #8291a3;
+	--dark-grey: #f8f8f8;
 	--line-yellow: #ffd54f;
 	--text-grey: #686868;
 	--dark-yellow: #ff8a00;
