--- a/src/pages/Home/gallery/PromoMenu/PromoMenu.module.scss
+++ b/src/pages/Home/gallery/PromoMenu/PromoMenu.module.scss
@@ -1,4 +1,3 @@
-// список популярных ссылок
 .link {
 	display: flex;
 	justify-content: space-between;
@@ -10,10 +9,10 @@
 
 .name {
 	color: #feb700;
-  transition: padding .2s ease-in;
-  &:hover {
-    padding-left: 10px;
-  }
+	transition: padding 0.2s ease-in;
+	&:hover {
+		padding-left: 10px;
+	}
 }
 
 .count {
