--- a/src/pages/Сontacts/Сontacts.module.scss
+++ b/src/pages/Сontacts/Сontacts.module.scss
@@ -5,16 +5,15 @@
 	align-items: center;
 	width: 100%;
 	height: 100%;
-	background: url('/assets/headerBg.png'),
+	background: url('/assets/headerBg.png') no-repeat,
 		linear-gradient(360deg, #7e6af3 15.95%, #6540cd 63.1%);
-	background-repeat: no-repeat;
 	background-size: cover;
 	color: var(--white);
 }
 
 .root {
 	display: flex;
-  justify-content: space-between;
+	justify-content: space-between;
 	gap: 30px;
 }
 
@@ -24,76 +23,80 @@
 	flex-direction: column;
 	gap: 30px;
 
-	h1 {
-		color: var(--white);
-		font-weight: 700;
-		font-size: 30px;
-		line-height: 1;
-	}
-	p {
-		color: var(--white);
-		font-weight: 500;
-		font-size: 16px;
-		line-height: 1.5;
-	}
-
 	a {
 		display: inline-block;
 		padding: 12px 24px;
 	}
 
-  .name {
-    margin-top: 30px;
-    margin-bottom: 16px;
-    p {
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 1.5;
-    }
-  }
-
-	.warning {
-    display: flex;
-    align-items: center;
-		max-width: 515px;
-		padding: 21px 25px;
-		background: rgba(80, 57, 189, 0.5);
-		border-radius: 10px;
-
-		font-weight: 500;
-		font-size: 16px;
-		line-height: 1.5;
+	.title1,
+	p {
 		color: var(--white);
+	}
+}
 
-    svg {
-      margin-right: 22px;
-      flex-shrink: 0;
-    }
+.title1 {
+	font-weight: 700;
+	font-size: 30px;
+	line-height: 1;
+}
+
+.leftText {
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+}
+
+.nameUser {
+	margin-top: 30px;
+	margin-bottom: 16px;
+	p {
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 1.5;
+	}
+}
+
+.leftList {
+	li {
+		display: flex;
+		align-items: center;
+		font-weight: 600;
+		font-size: 18px;
+		line-height: 1.5;
 	}
 
-  .list {
-		li {
-			display: flex;
-			align-items: center;
-			font-weight: 600;
-			font-size: 18px;
-			line-height: 1.5;
+	& > li + li {
+		margin-top: 11px;
+	}
+}
 
-			.icon {
-				width: 30px;
-				height: 30px;
-				background: rgba(255, 255, 255, 0.2);
-				border-radius: 17px;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				margin-right: 20px;
-			}
-		}
+.contactsIcon {
+	width: 30px;
+	height: 30px;
+	background: rgba(255, 255, 255, 0.2);
+	border-radius: 17px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-right: 20px;
+}
 
-		& > * + * {
-			margin-top: 11px;
-		}
+.warning {
+	display: flex;
+	align-items: center;
+	max-width: 515px;
+	padding: 21px 25px;
+	background: rgba(80, 57, 189, 0.5);
+	border-radius: 10px;
+
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	color: var(--white);
+
+	svg {
+		margin-right: 22px;
+		flex-shrink: 0;
 	}
 }
 
@@ -107,20 +110,20 @@
 }
 
 .formBlock {
-	label {
-		font-weight: 500;
-		font-size: 14px;
-		line-height: 17px;
-		color: var(--grey);
-		margin-bottom: 15px;
-		cursor: pointer;
-	}
-
 	button {
 		padding: 12px 56px;
 		color: var(--white);
 		margin: 0 auto;
 	}
+}
+
+.label {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 17px;
+	color: var(--grey);
+	margin-bottom: 15px;
+	cursor: pointer;
 }
 
 .inputs {
@@ -143,36 +146,36 @@
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 40px;
+}
 
-	.errorText {
-		position: absolute;
-		text-align: left;
-		font-size: 10px;
-		color: rgba(249, 78, 78, 0.8);
-		top: 16px;
+.errorText {
+	position: absolute;
+	text-align: left;
+	font-size: 10px;
+	color: rgba(249, 78, 78, 0.8);
+	top: 8px;
+}
+
+.textarea {
+	width: 100%;
+	height: 200px;
+	padding: 15px 20px;
+	background: #f8f8f8;
+
+	border: 2px solid transparent;
+	border-radius: 30px;
+	resize: none;
+	transition: 0.2s ease-in;
+
+	&:focus {
+		border: 2px solid rgba(78, 100, 249, 0.8);
 	}
+}
 
-	.textarea {
-		width: 100%;
-		height: 200px;
-		padding: 15px 20px;
-		background: #f8f8f8;
+.errorTextarea {
+	border: 2px solid rgba(249, 78, 78, 0.8);
 
-		border: 2px solid transparent;
-		border-radius: 30px;
-		resize: none;
-		transition: 0.2s ease-in;
-
-		&:focus {
-			border: 2px solid rgba(78, 100, 249, 0.8);
-		}
-	}
-
-	.errorTextarea {
+	&:focus {
 		border: 2px solid rgba(249, 78, 78, 0.8);
-
-		&:focus {
-			border: 2px solid rgba(249, 78, 78, 0.8);
-		}
 	}
 }
