--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -5,7 +5,7 @@
 body {
 	font-weight: 400;
 	font-family: 'Inter';
-	background: var(--white);
+	background: rgb(248, 248, 248);
 	color: var(--title);
 }
 
